[package]
name = "rimnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4"
env_logger = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "net", "io-util"] }
tokio-util = { version = "0.6", features = ["codec"] }
tun = { version = "0.5", features = ["async"] }
bytes = { version = "1" }
byteorder = { version = "1" }
packet = "0.1"
futures = "0.3"
snow = "0.8"
chacha20poly1305 = "0.8"
ring = { version = "^0.16.2", features = ["std"] }
clap = "3.0.0-beta.5"
criterion = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
hex = "0.4"
lazy_static = "1.4"
base64 = "0"
