[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
network = { version = "0.1.0", path = "../network" }

anyhow = { version = "1.0", features = ["backtrace"] }
packet = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.8"
clap = { version = "3.0", features = ["derive"] }
base64 = "0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "net", "io-util"] }
