[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { version = "0.1.0", path = "../lib" }

anyhow = { version = "1.0", features = ["backtrace"] }
packet = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.8"
clap = "3.0.0-beta.5"
base64 = "0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "net", "io-util"] }
