[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { version = "0.1.0", path = "../lib" }

anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "net", "io-util"] }
tokio-util = { version = "0.6", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tun = { version = "0.5", features = ["async"] }
packet = "0.1"
futures = "0.3"
snow = "0.8"
chacha20poly1305 = "0.8"
ring = { version = "^0.16.2", features = ["std"] }
hex = "0.4"
lazy_static = "1.4"
base64 = "0"
regex = "1"
sled = "0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
clap = { version = "3.0", features = ["derive"] }
